generovany index (cz, en)

--- a/themes/sukl-pristupy-theme/source/index_en.html
+++ b/themes/sukl-pristupy-theme/source/index_en.html
@@ -269,7 +269,7 @@
                         <div class="section-tab__table-inner">
                             <i class="fa fa-user fa-3x section-tab__icon"
                                aria-hidden="true"></i>
-                            <div class="section-tab__title">Registration Holder</div>
+                            <div class="section-tab__title">MAH - Marketing Authorisation Holder</div>
                             <div class="section-tab__spen"></div>
                             <div class="section-tab__description">Registration holder form for requesting access to SÚKL agendas</div>
                         </div>
