--- a/themes/sukl-pristupy-theme/source/index.html
+++ b/themes/sukl-pristupy-theme/source/index.html
@@ -269,7 +269,7 @@
                         <div class="section-tab__table-inner">
                             <i class="fa fa-user fa-3x section-tab__icon"
                                aria-hidden="true"></i>
-                            <div class="section-tab__title">Držitel registrace</div>
+                            <div class="section-tab__title">Držitel rozhodnutí o registraci léčivých přípravků</div>
                             <div class="section-tab__spen"></div>
                             <div class="section-tab__description">Formulář držitele registrace pro žádost o přístup k agendám SÚKL</div>
                         </div>
@@ -716,7 +716,7 @@
                 <div class="section-tab__play-btn"><i class="fa fa-play section-tab__icon fa-1g" aria-hidden="true"></i><span>Přehrát video</span></div>
             </div>
             
-            <div class="section-tab video-btn-bg video-btn-pointer section-tab__video-tab" id="-cFPq7ZST4g">
+            <div class="section-tab video-btn-bg video-btn-pointer section-tab__video-tab" id="HB59yo2oOBs">
                 <div class="section-tab__table">
                     <div class="section-tab__table-inner">
                         <h3 class="section-tab__title">REG13</h3>
